Compiladores/Meu mini compilador/Analisador lexico/gramatica-organizada.txt
 
<programa>      ::=     <decl_list>
<decl_list>     ::=     <decl>
<decl>          ::=     <type_spec>ID<decl_1>

<decl_1>        ::=     <var_decl><decl>|
                        <fun_decl><decl>
                        
<var_decl>      ::=     ";"             |
                        "["INT_LIT"]";" |
                        "="<exp>";"     |
                        ","ID<var_decl>

<exp>           ::=     ID<exp_1><exp_3>|
                        "+"<exp><exp_3> |
                        "-"<exp><exp_3> |
                        "!"<exp><exp_3> |
                        FLOAT_LIT<exp_3>|
                        CHAR_LIT<exp_3> |
                        INT_LIT<exp_3> 

<exp_3>     ::=         "||"<exp><exp_3> |
                        "="<exp><exp_3>  |
                        "=="<exp><exp_3> |
                        "<="<exp><exp_3> |
                        "<"<exp><exp_3>  |
                        ">"<exp><exp_3>  |
                        ">="<exp><exp_3> |
                        "&&"<exp><exp_3> |
                        "+"<exp><exp_3>  |
                        "-"<exp><exp_3>  |
                        "%"<exp><exp_3>  |
                        "*"<exp><exp_3>  |
                        "/"<exp><exp_3>  | 
                        "+="<exp><exp_3> |
                        "-="<exp><exp_3> |
                        <vazio>
                    
<exp_1>         ::=     "["<exp>"]"<exp_2>  |
                        ".""sizeof"         |
                        "("<args>")"        |
                        "++"                |
                        "--"                |
                        <vazio>  

<exp_2>         ::=     "="<exp>|
                        <vazio>

<fun_decl>      ::=     "("<params>")"<fun_decl_1> 

<type_spec>     ::=     "void"  |
                        "float" |
                        "char"  |
                        "int"   |
                        "double"

<fun_decl_1>    ::=     <com_stmt>

<params>        ::=     "void"  |
                        <param> | 
                        <vazio>

<param>         ::=     <type_spec>ID<param_1>

<param_1>       ::=     "[""]"<param_2>             |
                        ","<type_spec>ID<param_1>   |
                        <vazio>

<param_2>       ::=     ","<type_spec>ID<param_1>|
                        <vazio>

<stmt>          ::=     <exp_stmt>      |
                        <com_stmt>      |
                        <if_stmt>       |
                        <while_stmt>    |
                        <return_stmt>   |
                        <break_stmt>    |
                        <for_stmt>      |
                        <printf_stmt>   |
                        <scanf_stmt>    |
                        <do_stmt>

<exp_stmt>      ::=     ";"     |
                        <exp>";"

<com_stmt>      ::=     "{"<content>"}"

<content>       ::=     <local_decls><content>  |
                        <stmt><content>         |
                        <vazio>
                    
<do_stmt>       ::=     "do"<stmt>"while""("<exp>")"";"

<while_stmt>    ::=     "while""("<exp>")"<stmt>

<local_decls>   ::=     <type_spec>ID<local_decl_1>|
                        <vazio>

<local_decl_1>  ::=     ";"<local_decls>        |
                        "[""]";"<local_decls>   |
                        "="<exp>";"<local_decls>|
                        ","ID<local_decl_2>

<local_decl_2>  ::=     ";"|
                        ","ID<local_decl_1>

<if_stmt>       ::=     "if""("<exp>")"<stmt><if_stmt_1>

<if_stmt_1>     ::=     <vazio>|
                        "else"<stmt>

<for_stmt>      ::=     "for""("<for_stmt_1>";"<exp>";"<exp>")"<stmt>

<for_stmt_1>    ::=     <type_spec>ID=<exp>|
                        <exp>

<return_stmt>   ::=     "return"<return_stmt_1>

<return_stmt_1> ::=     ";"     |
                        <exp>";"

<break_stmt>    ::=     "break"";"


 
<arg_list_1>    ::=     ","<exp><arg_list_1>|
                        <vazio>

<args>          ::=     <exp><arg_list_1>|
                        <vazio>
